--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,27 +1,25 @@
 /*----------  Containers  ----------*/
 
 .container {
-  width: var(--container-width);
+  width: 100%;
   margin: 0 auto;
-  padding: 0 1em;
 }
 
 .inner-container{
   width: 100%;
   max-width: var(--inner-container-width);
+  margin: auto;
 }
 
 
 header{
-  background: blue;
   width: 100%;
-  height: 20px;
+  height: 63px;
 }
 
 main{
-  background: purple;
   width: 100%;
-  height: 20px;
+  height: auto;
 }
 
 .about{
