--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -22,20 +22,11 @@ main{
   height: auto;
 }
 
-.about{
-  background: yellow;
-  width: 100%;
-  height: 20px; 
-}
-
-.contact{
-  background: red;
-  width: 100%;
-  height: 20px;
-}
-
 footer{
-  background: grey;
+  background: #222;
   width: 100%;
-  height: 20px;
+  height: auto;
+  font-size: rem(9px);
+  color: #454545;
+  padding: em(15px) em(40px);
 }
