--- a/scss/_memes.scss
+++ b/scss/_memes.scss
@@ -1,18 +1,9 @@
-.memes-gallery{
+.memes-gallery__container{
     padding: em(90px);
 }
 
-.memes-gallery__hexagon{
-    // width: 180px; Desktop
-    // height: 206px;
-    width: 100%;
-    height: auto;
-    margin-bottom: em(15px);
-}
-
-.meme__img{
-    // width: 180px; //desktop
-    // height: 206px;
+.memes-gallery__meme{
+    margin-bottom: em(150px);
 }
 
 /** Memes edit **/
@@ -21,9 +12,7 @@
     width: 100%;
 }
 
-.meme-generator img{
-    // width: 350px; //desktop
-    // height: 350px;
+.meme-generator .meme-generator__meme{
     width: 100%;
     height: auto;
 } 
@@ -31,4 +20,65 @@
 .meme-edit__form{
     width: 100%;
     align-items: center;
+}
+
+.hexagon {
+  position: relative;
+  width: 190px;
+  height: 110px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+  /* Text styling */
+  line-height: 110px;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 6px;
+  color: #fff;
+  color: rgba(255,255,255,.5);
+  cursor: pointer;
+  transition: color 500ms ease, text-shadow 500ms ease;
+}
+.hexagon:hover {
+  color: #fff;
+  text-shadow: 0 0 10px white;
+}
+
+.hexagon .face1,
+.hexagon .face2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: inherit;
+  z-index: -1;
+  /* Keeps borders smooth in webkit */
+  backface-visibility: hidden;
+}
+.hexagon .face1:before,
+.hexagon .face2:before {
+  content: '';
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  background: inherit;
+}
+
+.hexagon .face1 { transform: rotate(60deg); }
+.hexagon .face1:before {
+  left: 0;
+  transform-origin: left top;
+  transform: rotate(-60deg) translate(-110px, 0);
+}
+
+.hexagon .face2 { transform: rotate(-60deg); }
+.hexagon .face2:before {
+  right: 0;
+  transform-origin: right top;
+  transform: rotate(60deg) translate(110px, 0);
 }
