added responsive meme container

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,7 +1,7 @@
 .contact {
     height: auto;
     background-color: #323232;
-    padding: em(50px) em(90px);
+    // padding: em(50px) em(90px);
 }
 
 .contact-info {
