--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,7 +1,7 @@
 .about {
     height: auto;
     background-color: #2eb398;
-    padding: em(50px) em(90px);
+    // padding: em(50px) em(90px);
 }
 .developer {
     color: #d7fcf5;
