--- a/scss/_memes.scss
+++ b/scss/_memes.scss
@@ -25,6 +25,7 @@
 .hexagon {
   position: relative;
   width: 190px;
+  min-width: 190px;
   height: 110px;
   background-position: center center;
   background-size: cover;
