--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -21,4 +21,6 @@
   font-family: 'Lato';
   src: url('../assets/fonts/Lato2OFL/Lato-Regular.ttf');
   font-weight: 400;
-} 
+}
+
+$fa-font-path:   "../node_modules/font-awesome/fonts";
