Search ares and imgs load

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -55,7 +55,10 @@
 }
 
 .developer-socialmedia__icons{
-    align-self: flex-end;
+    
+    &:nth-child(1){
+        align-self: flex-end;
+    }
     .fa{
         font-size: rem(30px);
     }  
