--- a/scss/_memes.scss
+++ b/scss/_memes.scss
@@ -1,6 +1,6 @@
-.memes-gallery__container{
-    padding-top: em(90px);
-}
+// .memes-gallery__container{
+//     padding-top: em(90px);
+// }
 
 .memes-gallery__meme{
     margin-bottom: em(150px);
@@ -33,8 +33,16 @@
     align-items: center;
 }
 
+// search container
 
 .search-meme__container{
     margin-bottom: em(60px);
+    @include from-mobile-only {
+        flex-direction: row;
+        align-items: center;
+    }
 }
 
+.search-keywords {
+    margin-left: em(50px);
+}
