added contact form and edited responsivity

--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -17,6 +17,12 @@
   }
 }
 
+@mixin from-tablet-only {
+  @media (min-width: $tablet-breakpoint) {
+    @content;
+  }
+}
+
 /*----------  Flex Helpers  ----------*/
 
 .flex {
