--- a/scss/_main-nav.scss
+++ b/scss/_main-nav.scss
@@ -20,3 +20,12 @@
         color: #2eac93;
     }
 }
+
+.arrow-down {
+margin: auto;
+  width: 0; 
+  height: 0; 
+  border-left: 40px solid transparent;
+  border-right: 40px solid transparent;
+  border-top: 20px solid #323232;
+}
