--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,7 +8,7 @@ $tablet-breakpoint: 925px;
   --inner-container-width: 824px;
   /* Fonts */
   --primary-font: Lato;
-  --secondary-font: Ubuntu;
+  --secondary-font: Maven Regular;
   /* Colors */
   --main-color: #626262;
   --sections-bg: #f0f0f0;
