--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -17,16 +17,11 @@
     margin: em(70px) 0;
     @include from-mobile-only{
         margin-right: em(10px);
-    }
-    // width: 100%;
-    // height: 50vw;
-    // @include from-mobile-only{
-    //     height: 206px;
-    // }
+    };
 }
 
 .developer_1{
-    background-image: url('../assets/imgs/memes/1.jpg');
+    background-image: url('../assets/imgs/SaharSabin.jpg');
 }
 
 .developer_2{
@@ -38,11 +33,13 @@
 
 .developer-name {
     font-size: rem(30px);
+    font-family: var(--secondary-font);
 }
 
 .developer-title {
     font-size: rem(18px);
     color: #20816d;
+    font-family: var(--secondary-font);    
 }
 
 .developer-bio {
@@ -61,6 +58,10 @@
     }
     .fa{
         font-size: rem(30px);
+        transition: all 0.25s ease;
+        &:hover{
+            color: white;
+        }
     }  
 }
 
@@ -71,7 +72,7 @@
     color: #096c9b;
 }
 .developer-socialmedia__icons .fa-twitter-square{
-    color: white;
+    color: #0084b4;
 }
 .developer-socialmedia__icons .fa-phone-square{
     color: #dc5443;
