--- a/scss/_main-nav.scss
+++ b/scss/_main-nav.scss
@@ -31,13 +31,13 @@
     }
 }
 
-
-
 .arrow-down {
-margin: auto;
-  width: 0; 
-  height: 0; 
-  border-left: 40px solid transparent;
-  border-right: 40px solid transparent;
-  border-top: 20px solid #323232;
+    margin: auto;
+    width: 0; 
+    height: 0; 
+    border-left: 40px solid transparent;
+    border-right: 40px solid transparent;
+    border-top: 20px solid #323232;
+    position: relative;
+    top: -1px;
 }
