--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -9,7 +9,7 @@
   width: 100%;
   max-width: var(--inner-container-width);
   margin: auto;
-  padding: em(10px);
+  // padding: em(10px);
 }
 
 
@@ -30,4 +30,8 @@ footer{
   font-size: rem(9px);
   color: #454545;
   padding: em(15px) em(40px);
+}
+
+.fa{
+  cursor: pointer;
 }
