Added auto completion support for keyword search

--- a/scss/_memes.scss
+++ b/scss/_memes.scss
@@ -133,8 +133,19 @@
     margin-left: em(5px);
 }
 
+.search-area{
+    position: relative;
+}
+
 .search-area > *{
     &:not(:last-child){
         margin-right: 10px;
     }
+}
+
+.search-dropdown{
+    position: absolute;
+    top: 24px;
+    z-index: 99999;
+    width: 100%;
 }
